--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 </span>
             </div>
             <div class="help-content">
-                <img class="emblem" src="helpImages/Emblem.png" alt="Emblem.png">
+                <img class="emblem" src="helpImages/emblem.png" alt="emblem.png">
                 MoLoTool is an interactive web application to scan DNA sequences for transcription factor binding sites
                 (TFBS) with position weight matrices presented in HOCOMOCO model collection.
                 The sequence markup is text-based and can be easily copied and pasted via clipboard to any MS-Word-type
@@ -371,7 +371,7 @@
                     button. Use
                     <span class="italic bold">Lock</span>
                     (<img class="img-example" src="helpImages/Result/LockOpen.png" alt="LockOpen.png">,
-                    <img  class="img-example"src="helpImages/Result/LockClosed.png" alt="LockClosed.png">)
+                    <img  class="img-example" src="helpImages/Result/LockClosed.png" alt="LockClosed.png">)
                     to prevent a particular tab from horizontal scrolling.
 
 
