--- a/index.html
+++ b/index.html
@@ -386,63 +386,72 @@
                     <span class="italic bold">An important note: the generated table will contain sites only
                     for the ACTIVE currently visible sequence.</span>
 
-                    <img style="max-width: 700px" class="img-wide" src="helpImages/modeTable.png" alt="modeTable.png">
+                    <img style="max-width: 500px" class="img-wide" src="helpImages/modeTable.png" alt="modeTable.png">
                 </p>
             </div>
         </div>
         <div>
             <div class="help-header">3. Adjust P-value</div>
             <div class="help-content">
-                Set desired motif P-value exactly or by dragging the slider. The value is shown in both
-                <span class="italic bold">linear</span>
-                and
-                <span class="italic bold">logarithmic scale</span>
-                and restricted to
-                <span class="italic bold">[ 1.00e-6, 5.00e-2 ]</span>
-                interval.
+                <p>
+                    Set desired motif P-value exactly or by dragging the slider. The value is shown in both
+                    <span class="italic bold">linear</span>
+                    and
+                    <span class="italic bold">logarithmic scale</span>
+                    and restricted to
+                    <span class="italic bold">[ 1.00e-6, 5.00e-2 ]</span>
+                    interval.
 
-                <img style="max-width: 700px" class="img-wide" src="helpImages/PValue.png" alt="PValue.png">
-
-                You may experience a minor slowdown when visualizing TFBS in longer sequences (100bp+).
+                    <img style="max-width: 700px" class="img-wide" src="helpImages/PValue.png" alt="PValue.png">
+                </p>
+                <p>
+                    You may experience a minor slowdown when visualizing TFBS in longer sequences (100bp+).
+                </p>
             </div>
         </div>
         <div>
             <div class="help-header">4. Check results</div>
             <div class="help-content">
-                Detailed data on detected binding sites are provided in the table at the bottom of the page.
-                The population of the complete table is the most
-                <span class="italic bold">time-consuming</span>
-                operation. To maintain overall page responsiveness while tweaking settings the table can be switched off
-                using
-                <span class="italic bold">Hide table</span>
-                button
-                (<img class="img-example" src="helpImages/TopPannel/HideTable.png" alt="HideTable.png">).
+                <p>
+                    Detailed data on detected binding sites are provided in the table at the bottom of the page.
+                    The population of the complete table is the most
+                    <span class="italic bold">time-consuming</span>
+                    operation. To maintain overall page responsiveness while tweaking settings the table can be switched off
+                    using
+                    <span class="italic bold">Hide table</span>
+                    button
+                    (<img class="img-example" src="helpImages/TopPannel/HideTable.png" alt="HideTable.png">).
 
-                <img style="max-width: 700px" class="img-wide" src="helpImages/Table/Table.png" alt="Table.png">
+                    <img style="max-width: 700px" class="img-wide" src="helpImages/Table/Table.png" alt="Table.png">
+                </p>
+                <p>
+                    The table has additional controls.
+                    <span class="italic bold">Select columns</span>
+                    (<img class="img-example" src="helpImages/Table/SelectColumns.png" alt="SelectColumns.png">)
+                    can be used to show additional data on predicted TFBS.
+                    <span class="italic bold">Info</span> button
+                    (<img class="img-example" src="helpImages/Table/ShowMore.png" alt="ShowMore.png">)
+                    unfolds additional information directly within the table.
+                </p>
+                <p>
+                    The table contents can be saved using
+                    <span class="italic bold">Export</span> buttons
+                    (<img class="img-example" src="helpImages/Table/Export.png" alt="Export.png">).
 
-                The table has additional controls.
-                <span class="italic bold">Select columns</span>
-                (<img class="img-example" src="helpImages/Table/Export.png" alt="Export.png">)
-                can be used to show additional data on predicted TFBS.
-                <span class="italic bold">Info</span> button
-                (<img class="img-example" src="helpImages/Table/ShowMore.png" alt="ShowMore.png">)
-                unfolds additional information directly within the table. The table contents can be saved using
-                <span class="italic bold">Export</span> buttons
-                (<img class="img-example" src="helpImages/Table/Export.png" alt="Export.png">).
+                    The results can be filtered with the
+                    <span class="italic bold">Search</span> field
+                    (<img class="img-example" src="helpImages/Table/Search.png" alt="Search.png">).
 
-                The results can be filtered with the
-                <span class="italic bold">Search</span> field
-                (<img class="img-example" src="helpImages/Table/Search.png" alt="Search.png">).
-
-                <span class="italic bold">An important note:</span>
-                According to the chosen
-                <span class="italic bold">Mode</span>
-                (<img class="img-example" src="helpImages/TopPannel/Single.png" alt="Single.png"> - Single,
-                <img  class="img-example" src="helpImages/TopPannel/ModeMultiple.png" alt="ModeMultiple.png"> - Multiple)
-                the table will contain different sites (either from all sequences or from the single active sequence
-                visualized, details are given above in the
-                <span class="italic bold">Add sequences</span>
-                part of the guide).
+                    <span class="italic bold">An important note:</span>
+                    According to the chosen
+                    <span class="italic bold">Mode</span>
+                    (<img class="img-example" src="helpImages/TopPannel/Single.png" alt="Single.png"> - Single,
+                    <img  class="img-example" src="helpImages/TopPannel/ModeMultiple.png" alt="ModeMultiple.png"> - Multiple)
+                    the table will contain different sites (either from all sequences or from the single active sequence
+                    visualized, details are given above in the
+                    <span class="italic bold">Add sequences</span>
+                    part of the guide).
+                </p>
             </div>
         </div>
     </div>
