-added scrollPosition support for help tab
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <script src="js/machinery/builder/uiBuilder.js"></script>
 
     <script src="js/machinery/builder/components/uiButtons/uiButtons.js"></script>
+    <script src="js/machinery/builder/components/uiButtons/scrollPositionSaver.js"></script>
     <script src="js/machinery/builder/components/uiButtons/inputWindowButtons/submitButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/inputWindowButtons/inputMethodButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/inputWindowButtons/showInputButton.js"></script>
