-help: added std value for pValue -pSlider: added reset to default values
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -432,6 +432,11 @@
                     and restricted to
                     <span class="italic bold">[ 1.00e-6, 5.00e-2 ]</span>
                     interval.
+                    <span class="italic bold">Recommended permissive P-value = 0.0005</span>
+                    (approximately 1 expected prediction in a
+                    stretch of random 1000 nucleotides of double-stranded DNA).
+                    <a target="_blank" href="https://academic.oup.com/nar/article/41/D1/D195/1056610/HOCOMOCO-a-comprehensive-collection-of-human">
+                        [Check HOCOMOCO v9 for details.]</a>
 
                     <img style="max-width: 700px" class="img-wide" src="helpImages/PValue.png" alt="PValue.png">
                 </p>
