-help: added std value for pValue -pSlider: added reset to default values
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -435,8 +435,10 @@
                     <span class="italic bold">Recommended permissive P-value = 0.0005</span>
                     (approximately 1 expected prediction in a
                     stretch of random 1000 nucleotides of double-stranded DNA).
+                    Check
                     <a target="_blank" href="https://academic.oup.com/nar/article/41/D1/D195/1056610/HOCOMOCO-a-comprehensive-collection-of-human">
-                        [Check HOCOMOCO v9 for details.]</a>
+                        [HOCOMOCO v9]</a>
+                    for details.
 
                     <img style="max-width: 700px" class="img-wide" src="helpImages/PValue.png" alt="PValue.png">
                 </p>
