-added substitutions file
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <ul class="nav pull-left top-first">
                     <li class="search-container">
                         <i class="material-icons md-dark">search</i>
-                        <input id="motif-search" placeholder="Select models" autocomplete="off" autocorrect="off" autocapitalize="off">
+                        <input id="motif-search" placeholder="Start typing motif name here ..." autocomplete="off" autocorrect="off" autocapitalize="off">
 
                         <div class="suggestions">
                             <div id='legend-container' class="suggestion"></div>
