-added tooltip to copy and lock buttons
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <script src="js/machinery/AppContainer.js"></script>
 
-
+    <link rel="stylesheet" href="css/utilities/tooltips.css">
     <link rel="stylesheet" href="css/primaryComponentsSettings.css">
     <link rel="stylesheet" href="css/dataTable.css">
     <link rel="stylesheet" href="css/pSlider.css">
