-changed tooltip delay
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <i class="material-icons md-dark">search</i>
                         <input id="motif-search" placeholder="Start typing motif name here ..." autocomplete="off" autocorrect="off" autocapitalize="off">
 
-                        <div class="suggestions">
+                        <div class="suggestions hidden">
                             <div id='legend-container' class="suggestion"></div>
 
                             <div id='motif-list'></div>
