-submitButton: added close on submit if no warnings
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </div>
     </div>
 
-    <div id='help-cmp' class="interface-component">
+    <div id='help-cmp' class="interface-component hidden">
         <div>
             <div class="help-header">MoLoTool:
                 <span class="small-font">Transcription Factor
