-added tutorial section
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <script src="js/machinery/builder/components/uiButtons/inputWindowButtons/zoomButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/topWindowButtons/clearButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/topWindowButtons/demoButton.js"></script>
+    <script src="js/machinery/builder/components/uiButtons/topWindowButtons/tutorialButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/topWindowButtons/helpButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/topWindowButtons/showTableButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/topWindowButtons/switchComparisonModeButton.js"></script>
@@ -264,6 +265,7 @@
                     <a id="open-table-button" class="interface-button" href="#"></a>
                     <a id="clear-button" class="interface-button" href="#"></a>
                     <a id="demo-button" class="interface-button" href="#"></a>
+                    <a id="tutorial-button" class="interface-button" href="#"></a>
                     <a id="help-button" class="interface-button" href="#"></a>
                 </ul>
             </nav>
@@ -303,6 +305,8 @@
                 and precalculated score thresholds (see HOCOMOCO website for details).
             </div>
         </div>
+    </div>
+    <div id='tutorial-cmp' class="interface-component hidden">
         <div>
             <div class="help-header">Step-by-step user guide to MoLoTool</div>
             <div class="help-content">
