-index: MoLoTool tagline reduced
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         </div>
                     </li>
                     <li class="title-container">
-                        MoLoTool: Transcription Factor Motif Location Toolbox
+                        MoLoTool
                     </li>
                 </ul>
                 <ul class="nav pull-right top-second">
