-index: MoLoTool tagline reduced
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
                 <ul>
                     <li class="title-container">
-                        MoLoTool
+                        MoLoTool: TFBS motif scanner
                     </li>
                 </ul>
                 <ul class="nav pull-right top-second">
