-uiButtons: added Home button
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <script src="js/machinery/builder/components/uiButtons/topWindowButtons/showTableButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/topWindowButtons/switchComparisonModeButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/searchWindowButtons/showMoreButton.js"></script>
+    <script src="js/machinery/builder/components/uiButtons/searchWindowButtons/homeButton.js"></script>
     <script src="js/machinery/builder/components/uiButtons/searchWindowButtons/collectionSettingsButton.js"></script>
 
     <script src="js/machinery/builder/components/inputParsing/inputParsing.js"></script>
@@ -260,7 +261,7 @@
 
                 <ul>
                     <li class="title-container">
-                        MoLoTool: TFBS motif scanner
+                        <span>MoLoTool: TFBS motif scanner</span>
                     </li>
                 </ul>
                 <ul class="nav pull-right top-second">
