-inputErros: corrected -MoLoTool title: corrected
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                 <ul>
                     <li class="title-container">
-                        <span>MoLoTool: TFBS motif scanner</span>
+                        <span>MoLoTool: Transcription Factor Motif Location Toolbox</span>
                     </li>
                 </ul>
                 <ul class="nav pull-right top-second">
@@ -278,6 +278,7 @@
     </div>
 
     <div id='help-cmp' class="interface-component hidden">
+
         <div>
             <div class="help-header">MoLoTool:
                 <span class="small-font">Transcription Factor
