-helpButton, tutorialButton: close added
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     </div>
 
     <div id='help-cmp' class="interface-component hidden">
-
+        <div class="close"></div>
         <div>
             <div class="help-header">MoLoTool:
                 <span class="small-font">Transcription Factor
@@ -313,6 +313,7 @@
         </div>
     </div>
     <div id='tutorial-cmp' class="interface-component hidden">
+        <div class="close"></div>
         <div>
             <div class="help-header">Step-by-step user guide to MoLoTool</div>
             <div class="help-content">
