-About page: Added contacts
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -311,6 +311,36 @@
                 and precalculated score thresholds (see HOCOMOCO website for details).
             </div>
         </div>
+        <div>
+            <div class="help-header">
+                <a target="_blank" href="http://hocomoco.autosome.ru/help">
+                    Support
+                    <a target="_blank" href="https://github.com/EugeneRumynskiy/RumHocomoco_2.0">
+                        <img src="github.svg" alt="github" style="width: 20px; vertical-align: -1px;">
+                    </a>
+                </a>
+            </div>
+            <div class="help-content">
+                Next browsers are supported -
+                <span class="bold">Google Chrome v.49+</span>,
+                <span class="bold">Firefox v.45+</span>,
+                <span class="bold">Opera v.35+</span>.
+
+                Any technical questions should be addressed to
+                <a target="_blank" href="mailto:erumynskiy/at/gmail/dot/com">
+                    Evgeniy Ruminsky</a>,
+                <a target="_blank" href="mailto:ivan.kulakovskiy/at/gmail/dot/com">
+                    Ivan Kulakovskiy
+                </a> and
+                <a target="_blank" href="mailto:vorontsov.i.e/at/gmail/dot/com">
+                    Ilya Vorontsov</a> or directly to the
+                <a target="_blank" href="https://github.com/EugeneRumynskiy/RumHocomoco_2.0">
+                    Issues
+                </a>
+                page on Github.
+            </div>
+        </div>
+
     </div>
     <div id='tutorial-cmp' class="interface-component hidden">
         <div class="close"></div>
