-About page: Added contacts
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 </a>
             </div>
             <div class="help-content">
-                Next browsers are supported -
+                The following browsers are supported -
                 <span class="bold">Google Chrome v.49+</span>,
                 <span class="bold">Firefox v.45+</span>,
                 <span class="bold">Opera v.35+</span>.
