-Help: changed content
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </a>
             </div>
             <div class="help-content">
-                HOCOMOCO COmprehensive MOdel COllection (HOCOMOCO) contains Transcription Factor (TF)
+                HOmo sapiens COmprehensive MOdel COllection (HOCOMOCO) contains Transcription Factor (TF)
                 binding models for human and mouse TFs represented as classic
                 <a target="_blank" href="https://en.wikipedia.org/wiki/Position_weight_matrix">
                     Position Weight Matrices
