--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
             </div>
             <div class="help-content">
                 <img class="emblem" src="helpImages/emblem.png" alt="emblem.png">
+                Test
                 MoLoTool is an interactive web application to scan DNA sequences for transcription factor binding sites
                 (TFBS) with position weight matrices presented in HOCOMOCO model collection.
                 The sequence markup is text-based and can be easily copied and pasted via clipboard to any MS-Word-type
