testing new nav bar

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                 <ul>
                     <li class="title-container">
-                        <span>MoLoTool: Transcription Factor Motif Location Toolbox</span>
+                        <span>MoLoTool</span>
                     </li>
                 </ul>
                 <ul class="nav pull-right top-second">
